@@ -1,2 +1,2 @@
-#define VERSION "4.01.01"
-#define YEARS   "2005-2012"
+#define VERSION "4.01.02"
+#define YEARS   "2005-2013"
